src/test/deca/context/invalid/ContextAvecObjet/InstanceOf/instanceOf_Int.deca
// Description:
//   test sortie instanceof != int
//
// Resultats:
//    Erreur contextuelle ligne 12
//    type incompatible
class A{
    int x = 0;
}
{
    A a = new A();
    int x = a instanceof A;
}
